1999-03-31  Tom Tromey  <tromey@cygnus.com>

	* automake.in (quote_cond_val): Quote \n.
	(unquote_cond_val): Unquote \n.
	(read_am_file): If line ends with `\', preserve it and add a
	newline.
	(read_main_am_file): In conditional case, put conditional text at
	beginning of each generated line.

1999-03-31  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* automake.in (handle_tests): support XFAIL_TEST
	* automake.texi: document it

1999-03-27  Tom Tromey  <tromey@cygnus.com>

	* automake.in (saw_sources_p): Correctly count header extensions
	seen.
	(handle_headers): Fixed order of arguments to am_install_var.

	* automake.in (am_install_var): Don't error if EXTRA_foo is
	defined uselessly.

	* scripts.am (install-@DIR@SCRIPTS): Use NDIR when appropriate.
	(uninstall-@DIR@SCRIPTS): Likewise.
	* progs.am (install-@DIR@PROGRAMS): Use NDIR when appropriate.
	(uninstall-@DIR@PROGRAMS): Likewise.
	* ltlib.am (install-@DIR@LTLIBRARIES): Use NDIR when appropriate.
	(uninstall-@DIR@LTLIBRARIES): Likewise.
	* lisp.am (install-@DIR@LISP): Use NDIR when appropriate.
	(uninstall-@DIR@LISP): Likewise.
	* libs.am (install-@DIR@LIBRARIES): Use NDIR when appropriate.
	(uninstall-@DIR@LIBRARIES): Likewise.
	* java.am (install-@DIR@JAVA): Use NDIR when appropriate.
	(uninstall-@DIR@JAVA): Likewise.
	* header.am (install-@DIR@HEADERS): Use NDIR when appropriate.
	(uninstall-@DIR@HEADERS): Likewise.
	* data.am (install-@DIR@DATA): Use NDIR when appropriate.
	(uninstall-@DIR@DATA): Likewise.
	* Makefile.in: Rebuilt.
	* Makefile.am (dist_pkgdata_DATA): Renamed.
	(EXTRA_DIST): Removed.
	(install-data-hook): Added POST_INSTALL; print commands as they
	are run; respect DESTDIR.
	* dist-vars.am (DISTFILES): Removed $(HEADERS).
	* automake.in (am_install_var): Accept `-candist' and
	`-defaultdist' options.  Handle `dist_' and `nodist_' prefixes.
	(am_primary_prefixes): Added can_dist argument.  Recognize `dist_'
	and `nodist_' prefixes.
	(handle_scripts): Pass -candist to am_install_var.