@@ -3794,12 +3794,13 @@ sub handle_tests
 	push (@phony, 'check-TESTS');
 
 	# Note: Solaris 2.7 seems to expand TESTS using VPATH.  That's
-	# why we choose `dir=' and not `dir=.'
+	# why we also try `dir='
 	$output_rules .= 'check-TESTS: $(TESTS)
 	@failed=0; all=0; xfail=0; xpass=0; \\
 	srcdir=$(srcdir); export srcdir; \\
 	for tst in $(TESTS); do \\
-	  if test -f $$tst; then dir=; \\
+	  if test -f ./$$tst; then dir=./; \\
+	  elif test -f $$tst; then dir=; \\
 	  else dir="$(srcdir)/"; fi; \\
 	  if $(TESTS_ENVIRONMENT) $${dir}$$tst; then \\
 	    all=`expr $$all + 1`; \\
