@@ -1,3 +1,8 @@
+1999-04-03  Raja R Harinath  <harinath@cs.umn.edu>
+
+	* automake.in (handle_tests): Test `dir=./' before `dir=', so that 
+	we do not depend on PATH starting with `.'.
+
 1999-03-31  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (quote_cond_val): Quote \n.
